# distributed-dataset

./: .gitignore  .gitmodules  .hlint.yaml  .sosrc  .travis.yml  LICENSE  README.md  cabal.project  ci.nix  ci.sh  default.nix  docs-ghpages.sh  hie.yaml  index.html  lts-10.10.yaml  lts-10.yaml  lts-11.7.yaml  lts-11.yaml  lts-12.26.yaml  make.sh  nightly.yaml  pkgs.nix  shell.nix  stack.yaml
.circleci/: config.yml
.github/workflows/: main.yml
distributed-dataset/: distributed-dataset.cabal  shell.nix
distributed-dataset-0.0.1.0/: Control-Concurrent-Throttled.html  Control-Distributed-Dataset-Aggr.html  Control-Distributed-Dataset-Local.html  Control-Distributed-Dataset-ShuffleStore.html  Control-Distributed-Dataset.html  Control-Distributed-Fork-Backend.html  Control-Distributed-Fork-Local.html  Control-Distributed-Fork-Utils.html  Control-Distributed-Fork.html  distributed-dataset.haddock  distributed-dataset.txt  doc-index.html  doc-index.json  index.html
distributed-dataset-0.0.1.0/src/: Control.Concurrent.Throttled.html  Control.Distributed.Dataset.Aggr.html  Control.Distributed.Dataset.Internal.Aggr.html  Control.Distributed.Dataset.Internal.Class.html  Control.Distributed.Dataset.Internal.Dataset.html  Control.Distributed.Dataset.Internal.Process.html  Control.Distributed.Dataset.Local.html  Control.Distributed.Dataset.ShuffleStore.html  Control.Distributed.Dataset.html  Control.Distributed.Fork.Backend.html  Control.Distributed.Fork.Internal.html  (+5 more)
distributed-dataset-aws/: distributed-dataset-aws.cabal  shell.nix
distributed-dataset-aws-0.0.1.0/: Control-Distributed-Dataset-AWS.html  Control-Distributed-Fork-AWS.html  distributed-dataset-aws.haddock  distributed-dataset-aws.txt  doc-index.html  doc-index.json  index.html
distributed-dataset-aws/src/Control/Concurrent/: Throttled.hs
distributed-dataset-aws/src/Control/Distributed/Dataset/: AWS.hs
distributed-dataset-aws/src/Control/Distributed/Fork/: AWS.hs
distributed-dataset-aws/src/Control/Distributed/Fork/AWS/: Lambda.hs
distributed-dataset-aws/src/Control/Distributed/Fork/AWS/Lambda/Internal/: Archive.hs  Constants.hs  Invoke.hs  Stack.hs  Types.hs
distributed-dataset-aws/src/Network/AWS/S3/: StreamingUpload.hs
distributed-dataset-aws/test/: Test.hs
distributed-dataset-hadoop/: distributed-dataset-hadoop.cabal
distributed-dataset-hadoop/src/Control/Distributed/Fork/: Hadoop.hs
distributed-dataset-opendatasets/: distributed-dataset-opendatasets.cabal  shell.nix
distributed-dataset-opendatasets-0.0.1.0/: Control-Distributed-Dataset-OpenDatasets-GHArchive.html  distributed-dataset-opendatasets.haddock  distributed-dataset-opendatasets.txt  doc-index.html  doc-index.json  index.html
distributed-dataset-opendatasets/src/Control/Distributed/Dataset/OpenDatasets/: GHArchive.hs
distributed-dataset-opendatasets/src/Control/Distributed/Dataset/OpenDatasets/GHArchive/: Types.hs
distributed-dataset-parquet/: distributed-dataset-parquet.cabal
distributed-dataset-parquet/src/Control/Distributed/Dataset/: Parquet.hs
distributed-dataset-ssh/: distributed-dataset-ssh.cabal
distributed-dataset-ssh/src/Control/Distributed/Fork/: SSH.hs
distributed-dataset-ssh/test/: Test.hs
distributed-dataset/src-internal/Data/Conduit/: Serialise.hs
distributed-dataset/src/Control/Concurrent/: Throttled.hs
distributed-dataset/src/Control/Distributed/: Dataset.hs  Fork.hs
distributed-dataset/src/Control/Distributed/Dataset/: Aggr.hs  Local.hs  LocalTmpShuffleStore.hs  ShuffleStore.hs
distributed-dataset/src/Control/Distributed/Dataset/Internal/: Aggr.hs  Arrow.hs  Class.hs  Dataset.hs  Process.hs
distributed-dataset/src/Control/Distributed/Fork/: Backend.hs  Internal.hs  Local.hs  LocalProcessBackend.hs  Utils.hs
distributed-dataset/src/Data/: FileSystem.hs
distributed-dataset/src/Data/Binary/: Zlib.hs
distributed-dataset/src/Data/Conduit/: Foldl.hs
distributed-dataset/src/Data/FileSystem/: InMemory.hs
distributed-dataset/src/Data/Monoid/: Commutative.hs
distributed-dataset/src/Path/: Extra.hs
distributed-dataset/test/: BatchTests.hs  SerialiseTests.hs  Tests.hs
distributed-fork/: distributed-fork.cabal
distributed-fork-aws-lambda/: distributed-fork-aws-lambda.cabal
distributed-fork-aws-lambda/src/Control/Concurrent/: Throttled.hs
distributed-fork-aws-lambda/src/Control/Distributed/Fork/: Lambda.hs
distributed-fork-aws-lambda/src/Control/Distributed/Fork/Lambda/Internal/: Archive.hs  Constants.hs  Invoke.hs  Stack.hs  Types.hs
distributed-fork-aws-lambda/test/: Test.hs
distributed-fork/src/Control/Distributed/: Fork.hs
distributed-fork/src/Control/Distributed/Fork/: Backend.hs  Internal.hs  LocalProcessBackend.hs  Utils.hs
distributed-fork/test/: Test.hs
examples/: complex.hs  examples.cabal  gh.hs  lambda.hs  package.yaml
examples/gh/: Main.hs  example-gh.cabal  shell.nix
examples/parquet/: Main.hs  example-parquet.cabal
nix/: sources.json
serverless-batch/: serverless-batch.cabal  shell.nix
serverless-batch/src/: Main.hs
serverless-batch/src/Control/Distributed/Closure/: Extra.hs
serverless-batch/src/Network/Serverless/: Batch.hs
serverless-batch/src/Network/Serverless/Batch/: IO.hs
serverless-execute/: .ghci  lib.nix  serverless-execute.cabal  shell.nix
serverless-execute-aws-lambda/: default.nix  lib.nix  serverless-execute-aws-lambda.cabal  shell.nix
serverless-execute-aws-lambda/src/: Main.hs
serverless-execute-aws-lambda/src/Network/AWS/Lambda/Invoke/: Fixed.hs
serverless-execute-aws-lambda/src/Network/Serverless/Execute/: Lambda.hs
serverless-execute-aws-lambda/src/Network/Serverless/Execute/Lambda/: Artifact.hs  Deploy.hs  Types.hs
serverless-execute-aws-lambda/src/Network/Serverless/Execute/Lambda/Internal/: Archive.hs  Constants.hs  Invoke.hs  Stack.hs  Types.hs
serverless-execute-aws-lambda/test/: Test.hs
serverless-execute/src/Network/Serverless/: Execute.hs
serverless-execute/src/Network/Serverless/Execute/: Backend.hs  Internal.hs  LocalProcessBackend.hs  Utils.hs
serverless-execute/test/: Test.hs
(+10 files in other folders)
