name:                distributed-dataset-aws
version:             0.0.1.0
synopsis:            AWS backends for distributed-dataset.
homepage:            https://github.com/utdemir/distributed-dataset
license:             BSD3
license-file:        LICENSE
author:              Utku Demir
maintainer:          Utku Demir <me@utdemir.com>
copyright:           Utku Demir
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Control.Distributed.Fork.AWS
                     , Control.Distributed.Dataset.AWS
  other-modules:       Control.Distributed.Fork.AWS.Lambda
                     , Control.Distributed.Fork.AWS.Lambda.Internal.Types
                     , Control.Distributed.Fork.AWS.Lambda.Internal.Constants
                     , Control.Distributed.Fork.AWS.Lambda.Internal.Stack
                     , Control.Distributed.Fork.AWS.Lambda.Internal.Archive
                     , Control.Distributed.Fork.AWS.Lambda.Internal.Invoke
                     , Control.Concurrent.Throttled
                     , Network.AWS.S3.StreamingUpload
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , distributed-dataset
                     , aeson
                     , aeson-qq
                     , amazonka
                     , amazonka-cloudformation
                     , amazonka-core >= 1.6.1
                     , amazonka-lambda >= 1.6.0
                     , amazonka-s3
                     , amazonka-sqs
                     , async
                     , base64-bytestring
                     , bytestring
                     , conduit
                     , containers
                     , deepseq
                     , distributed-closure
                     , dlist
                     , elf
                     , exceptions
                     , http-client
                     , interpolate
                     , lens
                     , lens-aeson
                     , lifted-async
                     , mmap
                     , mmorph
                     , mtl
                     , resourcet
                     , safe-exceptions
                     , SHA
                     , stm
                     , stratosphere >= 0.15.0
                     , text
                     , time
                     , transformers
                     , unliftio-core
                     , unordered-containers
                     , zip-archive

flag enable-aws-tests
    Description: Enable tests which use AWS resources
    Manual: True
    Default: False

test-suite tests
    if !flag(enable-aws-tests)
      buildable: False
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    default-language: Haskell2010
    ghc-options:      -Wall -static -optl-static -optl-pthread -fPIC
    build-depends:  base >=4.7 && < 5
                  , distributed-dataset
                  , distributed-dataset-aws
                  , tasty
                  , tasty-hunit
                  , text
