name:                distributed-dataset-hadoop
version:             0.0.1.0
synopsis:            Hadoop backend (YARN+HDFS) for distributed-dataset.
homepage:            https://github.com/utdemir/distributed-dataset
license:             BSD3
license-file:        LICENSE
author:              Utku Demir
maintainer:          Utku Demir <me@utdemir.com>
copyright:           Utku Demir
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Control.Distributed.Fork.Hadoop
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , distributed-dataset

flag enable-hadoop-tests
    Description: Enable tests which require a Hadoop installation
    Manual: True
    Default: False

test-suite distributed-dataset-hadoop-tests
    if !flag(enable-hadoop-tests)
      buildable: False
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    default-language: Haskell2010
    ghc-options:      -Wall -static -optl-static -optl-pthread -fPIC
    build-depends:  base >=4.7 && < 5
                  , distributed-dataset
                  , distributed-dataset-hadoop
                  , hedgehog
