name:                distributed-dataset-parquet
version:             0.0.1.0
synopsis:            Parquet format reader for distribute-dataset
homepage:            https://github.com/utdemir/distributed-dataset
license:             BSD3
author:              Utku Demir
maintainer:          me@utdemir.com
copyright:           Utku Demir
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Control.Distributed.Dataset.Parquet
  ghc-options:         -Wall
  build-depends:       base >= 4.11 && < 5
                     , distributed-dataset
                     , aeson
                     , base
                     , bytestring
                     , conduit
                     , conduit-extra
                     , http-conduit
                     , lens
                     , ndjson-conduit
                     , serialise
                     , text
                     , time
                     , parquet-hs
