name:                distributed-fork-aws-lambda
version:             0.0.1.0
synopsis:            AWS Lambda backend for distributed-fork.
homepage:            https://github.com/utdemir/distributed-fork
license:             BSD3
license-file:        LICENSE
author:              Utku Demir
maintainer:          me@utdemir.com
copyright:           Utku Demir
category:            Web
build-type:          Simple
cabal-version:       >=1.10

description:
    <https://aws.amazon.com/lambda AWS Lambda> backend for <http://hackage.haskell.org/package/distributed-fork distributed-fork>.

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Control.Distributed.Fork.Lambda
  other-modules:       Control.Distributed.Fork.Lambda.Internal.Types
                     , Control.Distributed.Fork.Lambda.Internal.Constants
                     , Control.Distributed.Fork.Lambda.Internal.Stack
                     , Control.Distributed.Fork.Lambda.Internal.Archive
                     , Control.Distributed.Fork.Lambda.Internal.Invoke
                     , Control.Concurrent.Throttled
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , distributed-fork
                     , SHA
                     , aeson
                     , aeson-qq
                     , amazonka
                     , amazonka-cloudformation
                     , amazonka-core
                     , amazonka-lambda >= 1.6.0
                     , amazonka-s3
                     , amazonka-sqs
                     , async
                     , base64-bytestring
                     , bytestring
                     , containers
                     , interpolate
                     , lens
                     , lens-aeson
                     , safe-exceptions
                     , stratosphere >= 0.15.0
                     , text
                     , time
                     , typed-process
                     , unordered-containers
                     , zip-archive

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language: Haskell2010
  ghc-options:      -Wall -static -optl-static -optl-pthread -fPIC
  build-depends:    base >=4.7 && < 5
                  , distributed-fork
                  , distributed-fork-aws-lambda
                  , tasty
                  , tasty-hunit
                  , text
