name:                distributed-fork
version:             0.0.1.0
synopsis:            Like 'forkIO', but uses remote machines instead of local threads.
homepage:            https://github.com/utdemir/distributed-fork
license:             BSD3
license-file:        LICENSE
author:              Utku Demir
maintainer:          me@utdemir.com
copyright:           Utku Demir
category:            Control
build-type:          Simple
cabal-version:       >=1.10

description:
    This library provides a way to offload a computation to another machine.
    .
    It uses pluggable 'Backend''s to spawn remote executors. It currently only supports AWS Lambda using <http://hackage.haskell.org/package/distributed-fork-aws-lambda distributed-fork-aws-lambda> library.
    .
    See <https://github.com/utdemir/distributed-fork README> for the rationale behind the library and "Control.Distributed.Fork" module for the usage.

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Control.Distributed.Fork
                     , Control.Distributed.Fork.Utils
                     , Control.Distributed.Fork.LocalProcessBackend
                     , Control.Distributed.Fork.Backend
  other-modules:       Control.Distributed.Fork.Internal
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , async
                     , binary
                     , bytestring
                     , constraints
                     , distributed-closure
                     , exceptions
                     , stm
                     , text
                     , terminal-size
                     , transformers
                     , typed-process

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.7 && < 5
                  , distributed-fork
                  , tasty
                  , tasty-hunit
                  , unix
