name:                serverless-batch
version:             0.1.0.0
homepage:            https://github.com/utdemir/serverless-batch
license:             BSD3
author:              Utku Demir
maintainer:          me@utdemir.com
copyright:           Utku Demir
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Network.Serverless.Batch
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , serverless-execute
                     , distributed-closure
                     , pipes
                     , bytestring
                     , fgl
                     , fgl-visualize
                     , universum
                     , transformers
