name:                serverless-execute-aws-lambda
version:             0.1.0.0
homepage:            https://github.com/utdemir/serverless-batch
license:             BSD3
author:              Utku Demir
maintainer:          me@utdemir.com
copyright:           Utku Demir
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Network.Serverless.Execute.Lambda
  other-modules:       Network.Serverless.Execute.Lambda.Types
                     , Network.Serverless.Execute.Lambda.Artifact
                     , Network.Serverless.Execute.Lambda.Deploy
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , serverless-execute
                     , amazonka
                     , amazonka-s3
                     , amazonka-lambda
                     , amazonka-cloudformation
                     , stratosphere
                     , zip-archive
                     , interpolate
                     , split
                     , SHA
                     , base64-bytestring
                     , text
                     , time
                     , typed-process
                     , bytestring
                     , lens
                     , aeson
                     , amazonka-core
                     , transformers
                     , vector
                     , unordered-containers
                     , exceptions
                     , directory

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language: Haskell2010
  ghc-options:      -Wall -static -optl-static -optl-pthread -fPIC
  build-depends:    base >=4.7 && < 5
                  , serverless-execute
                  , serverless-execute-aws-lambda
                  , tasty
                  , tasty-hunit
                  , unix
                  , amazonka
