name:                serverless-execute-aws-lambda
version:             0.1.0.0
homepage:            https://github.com/utdemir/serverless-batch
license:             BSD3
author:              Utku Demir
maintainer:          me@utdemir.com
copyright:           Utku Demir
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Network.Serverless.Execute.Lambda
  other-modules:       Network.Serverless.Execute.Lambda.Internal.Types
                     , Network.Serverless.Execute.Lambda.Internal.Constants
                     , Network.Serverless.Execute.Lambda.Internal.Stack
                     , Network.Serverless.Execute.Lambda.Internal.Archive
                     , Network.Serverless.Execute.Lambda.Internal.Invoke
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , serverless-execute
                     , SHA
                     , aeson
                     , aeson-qq
                     , amazonka
                     , amazonka-cloudformation
                     , amazonka-core
                     , amazonka-lambda
                     , amazonka-s3
                     , base64-bytestring
                     , bytestring
                     , directory
                     , exceptions
                     , interpolate
                     , microlens
                     , stratosphere
                     , text
                     , time
                     , transformers
                     , typed-process
                     , unordered-containers
                     , zip-archive

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language: Haskell2010
  ghc-options:      -Wall -static -optl-static -optl-pthread -fPIC
  build-depends:    base >=4.7 && < 5
                  , serverless-execute
                  , serverless-execute-aws-lambda
                  , tasty
                  , tasty-hunit
                  , amazonka
