name:                serverless-execute
version:             0.1.0
homepage:            https://github.com/utdemir/serverless-batch
license:             BSD3
license-file:        LICENSE
author:              Utku Demir
maintainer:          me@utdemir.com
copyright:           Utku Demir
category:            Web
build-type:          Simple
cabal-version:       >=1.10

description:
    This library provides an interface for executing IO actions on FaaS
    offerings like AWS Lambda.
    .
    It currently only supports AWS Lambda using <http://hackage.haskell.org/package/serverless-execute-aws-lambda serverless-execute-aws-lambda> library.
    .
    See <https://github.com/utdemir/serverless-batch README> for the rationale behing the library and "Network.Serverless.Execute" module for the usage.

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Network.Serverless.Execute
                     , Network.Serverless.Execute.Utils
                     , Network.Serverless.Execute.LocalProcessBackend
                     , Network.Serverless.Execute.Backend
  other-modules:       Network.Serverless.Execute.Internal
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , async
                     , binary
                     , bytestring
                     , constraints
                     , distributed-closure
                     , exceptions
                     , stm
                     , text
                     , terminal-size
                     , transformers
                     , typed-process

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.7 && < 5
                  , serverless-execute
                  , tasty
                  , tasty-hunit
                  , unix
