name:          example-gh
version:       0.0.1.0
homepage:      https://github.com/utdemir/distributed-dataset
license:       BSD3
author:        Utku Demir
maintainer:    me@utdemir.com
copyright:     Utku Demir
category:      Network
build-type:    Simple
cabal-version: >=1.10

executable example-gh
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:
    -Wall -Wunused-packages -static -optl-static -optl-pthread -fPIC

  build-depends:
      base                              >=4.11 && <5
    , distributed-dataset
    , distributed-dataset-aws
    , distributed-dataset-opendatasets
    , lens
    , text
